ui: scintilla: also set overflow:hidden on <scintilla> to prevent funny sizing on showing codeintel popup http://bugs.activestate.com/show_bug.cgi?id=92272
(integrated from komodo (trunk) change 68800 by marky)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@9527 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/bindings/scintilla.css
+++ b/src/chrome/komodo/skin/bindings/scintilla.css
@@ -41,6 +41,7 @@ scintilla {
   -moz-binding: url('chrome://komodo/content/bindings/scintilla.xml#scintilla');
   -moz-box-orient: vertical;
   display: -moz-stack; /* needed for autocomplete */
+  overflow: hidden; /* Don't affect split views - bug 92272 */
 }
 
 ko-findbar {
